Bug 419916 - GUI fonts rendering in Printer Applet LIST printers is not HiDPI.
Summary: GUI fonts rendering in Printer Applet LIST printers is not HiDPI.
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_printer_manager (other bugs)
Version First Reported In: 5.18.4
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords:
: 447980 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-04-10 13:24 UTC by fademind
Modified: 2022-01-21 04:47 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04
Sentry Crash Report:


Attachments
Screenshoot (60.21 KB, image/png)
2020-04-10 13:24 UTC, fademind
Details
screenie of system settings - printer in 4k res to display hidpi scale issue (125.09 KB, image/png)
2021-01-01 14:37 UTC, jonathan.lucas
Details
Screen shot of bad/blurry fonts (48.92 KB, image/png)
2021-04-30 03:21 UTC, Joe
Details
5.24 beta bad rendering (67.55 KB, image/png)
2022-01-21 04:21 UTC, Joe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fademind 2020-04-10 13:24:18 UTC
Created attachment 127427 [details]
Screenshoot

GUI Fonts rendering in Printer Applet LIST printers is not HiDPI. 
See Attachment. 

Details:
```
Manjaro Linux x86_64 KDE
plasma-desktop 5.18.4.1-1
plasma-framework 5.68.0-1
qt5-base 5.14.2-1
```
Comment 1 fademind 2020-04-10 13:32:46 UTC
Reproduction:

Display Global Scale: 125%
Force DPI scale 120 DPI
Segoe UI 9 pt as main font
Segoe UI 8 pt as small font
Hack 9 pt as terminal font 
Anty alias RGB Slight 
Install two printers.
See ugly fonts rendering in Printer List on left side window.
Comment 2 jonathan.lucas 2021-01-01 14:35:42 UTC
still present in latest plasma.

Operating System: Antergos Linux
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Kernel Version: 5.10.3-arch1-1
OS Type: 64-bit

Processors: 8 × AMD FX(tm)-8350 Eight-Core Processor
Memory: 31,3 GiB of RAM
Graphics Processor: AMD Radeon ™ RX 480 Graphics

scale: 156.25%
Comment 3 jonathan.lucas 2021-01-01 14:37:39 UTC
Created attachment 134437 [details]
screenie of system settings - printer in 4k res to display hidpi scale issue

latest plasma hidpi scale issue
Comment 4 Joe 2021-04-30 03:20:44 UTC
I can also confirm. Happens on all my systems both nvidia & amd gpus. Attached screen shot. Using latest on arch: 

Plasma 5.21.4
Frameworks: 5.81
QT: 5.15.2

Happens on my 1440p monitors and also, I believe my 1080p w/o scaling enabled. Will double check tomorrow.
Comment 5 Joe 2021-04-30 03:21:47 UTC
Created attachment 138021 [details]
Screen shot of bad/blurry fonts
Comment 6 jonathan.lucas 2021-06-09 17:05:20 UTC
still present on Plasma 5.22
Comment 7 Nate Graham 2022-01-12 20:45:44 UTC
*** Bug 447980 has been marked as a duplicate of this bug. ***
Comment 8 Bug Janitor Service 2022-01-12 21:46:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/print-manager/-/merge_requests/19
Comment 9 Kai Uwe Broulik 2022-01-13 17:05:58 UTC
Git commit 8f4fee72f3d0eb5455fcb868fa057d5aef936344 by Kai Uwe Broulik.
Committed on 12/01/2022 at 21:44.
Pushed by ngraham into branch 'master'.

Drop custom elide fading

It's fallen out of fashion, really, and causes problems with high-dpi.
Rather than fix it, just drop the indirection pixmap altogether.

M  +8    -51   printer-manager-kcm/PrinterDelegate.cpp

https://invent.kde.org/utilities/print-manager/commit/8f4fee72f3d0eb5455fcb868fa057d5aef936344
Comment 10 Joe 2022-01-13 17:27:41 UTC
Wow, great that this is finally fixed - I was just messing around with printers the other day and thinking about looking this bug report back up. 

Any chance it can be back-ported as a bug fix to a sooner release?
Comment 11 Joe 2022-01-21 04:20:33 UTC
So, this still looks broken to me on the 5.24 beta. I have attached the screen shot.
Comment 12 Joe 2022-01-21 04:21:23 UTC
Created attachment 145690 [details]
5.24 beta bad rendering

5.24 beta
Comment 13 Nate Graham 2022-01-21 04:47:18 UTC
The fix is in print-manager 22.04, which isn't released as a part of Plasma. So it's not in the beta yet. It will be released in April of 2022.