Drop custom elide fading

It's fallen out of fashion, really, and causes problems with high-dpi.
Rather than fix it, just drop the indirection pixmap altogether.

BUG: 419916